k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: java-advance
  labels:
    name: java-advance
    app.kubernetes.io/managed-by: kubectl
